# BlackBox-Canary-

./: README.md  celery_app.py  chat_logs.txt  folder.py  main.py  pyproject.toml
app/api/: chat.py  history.py  logs.py
app/core/: config.py
app/db/: mongo.py
app/models/: chat_log.py
app/schemas/: logs.py
app/services/: llm_chat.py
app/tasks/: enrich_task.py  log_task.py
